# Spark

./: .clang-format  CMakeLists.txt  README.md
Engine/include/Engine/: Engine.hpp  Logger.hpp  State.hpp
Engine/src/Engine/: CMakeLists.txt  Engine.cpp  Logger.cpp  State.cpp
Game/include/Game/States/: MenuState.hpp
Game/src/Game/: CMakeLists.txt  Main.cpp
Game/src/Game/States/: MenuState.cpp
include/Spark/Logger/: Logger.hpp
src/: Main.cpp
src/Spark/: Main.cpp
src/Spark/Logger/: CMakeLists.txt  Logger.cpp
